Se creó con Colab

--- a/NivelesIngresosPaises.ipynb
+++ b/NivelesIngresosPaises.ipynb
@@ -67,10 +67,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "8kfbfrD4KTZ5",
-        "outputId": "25804d26-134f-411e-831c-75ea9a9ef52a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "25804d26-134f-411e-831c-75ea9a9ef52a"
       },
       "outputs": [
         {
@@ -602,12 +602,12 @@
         "pd.pivot_table(data = df_paises, index = 'region',columns = 'incomeLevel', aggfunc='size',fill_value=0)"
       ],
       "metadata": {
-        "id": "E9ZZi70kQqpi",
-        "outputId": "4155299e-3e32-45ee-e0f7-a1829e243bb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "id": "E9ZZi70kQqpi",
+        "outputId": "4155299e-3e32-45ee-e0f7-a1829e243bb5"
       },
       "execution_count": 6,
       "outputs": [
@@ -985,11 +985,11 @@
         "print(df_paises[df_paises['incomeLevel'] == 'Low income'][['name', 'incomeLevel']])"
       ],
       "metadata": {
-        "id": "IVXuK1lKRrD6",
-        "outputId": "20e37ad2-b00f-4254-c5ec-fe6841bfb4f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IVXuK1lKRrD6",
+        "outputId": "20e37ad2-b00f-4254-c5ec-fe6841bfb4f2"
       },
       "execution_count": 7,
       "outputs": [
@@ -1040,6 +1040,55 @@
             "261                       Togo  Low income\n",
             "276                     Uganda  Low income\n",
             "292                Yemen, Rep.  Low income\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Por lo tanto, podemos desprender que Afghanistan tiene el ingreso menor. Por otro lado, Aruba se encuentra como el más alto."
+      ],
+      "metadata": {
+        "id": "E0RrGHyaTW08"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# País con el mayor ingreso\n",
+        "pais_mayor_ingreso = df_paises[df_paises['incomeLevel'] == 'High income'].iloc[0]\n",
+        "print(\"\\nPaís con el mayor ingreso:\")\n",
+        "print(pais_mayor_ingreso[['name', 'incomeLevel']])\n",
+        "\n",
+        "# País con el menor ingreso\n",
+        "pais_menor_ingreso = df_paises[df_paises['incomeLevel'] == 'Low income'].iloc[0]\n",
+        "print(\"\\nPaís con el menor ingreso:\")\n",
+        "print(pais_menor_ingreso[['name', 'incomeLevel']])"
+      ],
+      "metadata": {
+        "id": "hVAUgpSTTnOG",
+        "outputId": "6ed66dd7-658f-4464-b86d-ff4cc1244a41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "País con el mayor ingreso:\n",
+            "name                 Aruba\n",
+            "incomeLevel    High income\n",
+            "Name: 0, dtype: object\n",
+            "\n",
+            "País con el menor ingreso:\n",
+            "name           Afghanistan\n",
+            "incomeLevel     Low income\n",
+            "Name: 2, dtype: object\n"
           ]
         }
       ]
