--- a/NivelesIngresosPaises.ipynb
+++ b/NivelesIngresosPaises.ipynb
@@ -607,9 +607,9 @@
           "height": 297
         },
         "id": "E9ZZi70kQqpi",
-        "outputId": "4155299e-3e32-45ee-e0f7-a1829e243bb5"
+        "outputId": "828ef622-5c52-4a3d-b475-f486ba6479e0"
       },
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -657,7 +657,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1a6ae22b-7be3-477e-828b-dcccff546c11\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-915bd0c5-9dca-437e-89dd-01703d2035d5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -754,7 +754,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1a6ae22b-7be3-477e-828b-dcccff546c11')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-915bd0c5-9dca-437e-89dd-01703d2035d5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -806,12 +806,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1a6ae22b-7be3-477e-828b-dcccff546c11 button.colab-df-convert');\n",
+              "        document.querySelector('#df-915bd0c5-9dca-437e-89dd-01703d2035d5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1a6ae22b-7be3-477e-828b-dcccff546c11');\n",
+              "        const element = document.querySelector('#df-915bd0c5-9dca-437e-89dd-01703d2035d5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -831,8 +831,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3e09f0ea-b3e5-4665-bc2f-7de6f27d6c83\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e09f0ea-b3e5-4665-bc2f-7de6f27d6c83')\"\n",
+              "    <div id=\"df-544a99cf-ae7e-4d67-bd9d-023950aa02b7\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-544a99cf-ae7e-4d67-bd9d-023950aa02b7')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -951,7 +951,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3e09f0ea-b3e5-4665-bc2f-7de6f27d6c83 button');\n",
+              "            document.querySelector('#df-544a99cf-ae7e-4d67-bd9d-023950aa02b7 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -967,7 +967,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 16
         }
       ]
     },
@@ -1047,7 +1047,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Por lo tanto, podemos desprender que Afghanistan tiene el ingreso menor. Por otro lado, Aruba se encuentra como el más alto."
+        "Por lo tanto, podemos observar que Afghanistan tiene el ingreso menor. Por otro lado, Aruba se encuentra como el más alto."
       ],
       "metadata": {
         "id": "E0RrGHyaTW08"
@@ -1067,11 +1067,11 @@
         "print(pais_menor_ingreso[['name', 'incomeLevel']])"
       ],
       "metadata": {
-        "id": "hVAUgpSTTnOG",
-        "outputId": "6ed66dd7-658f-4464-b86d-ff4cc1244a41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hVAUgpSTTnOG",
+        "outputId": "6ed66dd7-658f-4464-b86d-ff4cc1244a41"
       },
       "execution_count": 14,
       "outputs": [
